--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,27 @@
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+.dashboard {
+  background-color: red;
+  padding: 20px 200px 0 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-height: 90vh;
+}
+.dashboardRow {
+  display: flex;
+  gap: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .dashboard {
+    background-color: blue;
+    padding: 10px;
+  }
+}
